// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders the page for a claim without documents or a status 1`] = `
<div>
  <span
    class="display-block font-heading-2xs margin-bottom-2 text-base-dark text-bold"
  >
    Application ID: NTN-111-ABS-01
  </span>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    Application status for Jane Doe
  </h1>
  <p
    class="usa-intro"
  >
    No action is required of you. You can view this page at any time to download notices, see decisions, or access the leave details for this application. Your employee has the right to appeal decisions under Massachusetts regulations (
    <a
      href="https://mass.gov/pfml/regulations"
      rel="noopener"
      target="_blank"
    >
      458 CMR 2.14
    </a>
    ).
  </p>
  <div
    class="display-flex flex-align-end margin-top-6 margin-bottom-3"
  >
    <h2
      class="flex-fill margin-right-1 font-heading-md text-bold"
    >
      Employee information
    </h2>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Employee name
      </h3>
      Jane Doe
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Organization
      </h3>
      Work Inc.
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Employer ID number (EIN)
      </h3>
      12-3456789
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Mailing address
      </h3>
      <span
        class="residential-address"
        data-testid="residential-address"
      >
        1234 My St.
        <br />
        Boston
        , 
        MA
         
        00000
      </span>
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Social Security Number or Individual Taxpayer Identification Number
      </h3>
      ***-**-1234
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Date of birth
      </h3>
      7/17/****
    </div>
  </div>
  <div
    class="display-flex flex-align-end margin-top-6 margin-bottom-3"
  >
    <h2
      class="flex-fill margin-right-1 font-heading-md text-bold"
    >
      Leave details
    </h2>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Leave duration
      </h3>
      1/1/2022 to 7/1/2022
    </div>
  </div>
  <div
    class="margin-top-6"
    data-testid="absence periods"
  >
    <h3
      class="font-heading-sm text-bold"
    >
      Medical leave
    </h3>
    <table
      class="usa-table usa-table--borderless width-full usa-table--stacked"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            Date range
          </th>
          <th
            scope="col"
          >
            Leave frequency
          </th>
          <th
            scope="col"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-testid="1-0"
        >
          <th
            class="tablet:width-card-lg"
            data-label="Date range"
            scope="row"
          >
            5/1/2022 to 7/1/2022
          </th>
          <td
            class="tablet:width-card-lg"
            data-label="Leave frequency"
          >
            Reduced leave schedule
          </td>
          <td
            data-label="Status"
          >
            <span
              class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-base-darkest bg-warning-lighter"
            >
              Pending
            </span>
          </td>
        </tr>
        <tr
          data-testid="1-1"
        >
          <th
            class="tablet:width-card-lg"
            data-label="Date range"
            scope="row"
          >
            1/1/2022 to 4/1/2022
          </th>
          <td
            class="tablet:width-card-lg"
            data-label="Leave frequency"
          >
            Continuous leave
          </td>
          <td
            data-label="Status"
          >
            <span
              class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-base-darkest bg-warning-lighter"
            >
              Pending
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Status renders the page for a completed claim 1`] = `
<div>
  <span
    class="display-block font-heading-2xs margin-bottom-2 text-base-dark text-bold"
  >
    Application ID: NTN-111-ABS-01
  </span>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
    tabindex="-1"
  >
    Application status for Jane Doe
  </h1>
  <p
    class="usa-intro"
  >
    No action is required of you. You can view this page at any time to download notices, see decisions, or access the leave details for this application. Your employee has the right to appeal decisions under Massachusetts regulations (
    <a
      href="https://mass.gov/pfml/regulations"
      rel="noopener"
      target="_blank"
    >
      458 CMR 2.14
    </a>
    ).
  </p>
  <div
    class="display-flex flex-align-end margin-top-6 margin-bottom-3"
  >
    <h2
      class="flex-fill margin-right-1 font-heading-md text-bold"
    >
      Employee information
    </h2>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Employee name
      </h3>
      Jane Doe
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Organization
      </h3>
      Work Inc.
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Employer ID number (EIN)
      </h3>
      12-3456789
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Mailing address
      </h3>
      <span
        class="residential-address"
        data-testid="residential-address"
      >
        1234 My St.
        <br />
        Boston
        , 
        MA
         
        00000
      </span>
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Social Security Number or Individual Taxpayer Identification Number
      </h3>
      ***-**-1234
    </div>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Date of birth
      </h3>
      7/17/****
    </div>
  </div>
  <div
    class="display-flex flex-align-end margin-top-6 margin-bottom-3"
  >
    <h2
      class="flex-fill margin-right-1 font-heading-md text-bold"
    >
      Leave details
    </h2>
  </div>
  <div
    class="margin-bottom-2 padding-bottom-2 display-flex flex-justify border-bottom-2px border-base-lighter"
  >
    <div
      class="margin-right-2"
    >
      <h3
        class="margin-bottom-1 font-heading-xs text-bold"
      >
        Leave duration
      </h3>
      1/1/2022 to 7/1/2022
    </div>
  </div>
  <div
    class="margin-top-6"
    data-testid="absence periods"
  >
    <h3
      class="font-heading-sm text-bold"
    >
      Medical leave
    </h3>
    <table
      class="usa-table usa-table--borderless width-full usa-table--stacked"
    >
      <thead>
        <tr>
          <th
            scope="col"
          >
            Date range
          </th>
          <th
            scope="col"
          >
            Leave frequency
          </th>
          <th
            scope="col"
          >
            Status
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-testid="1-0"
        >
          <th
            class="tablet:width-card-lg"
            data-label="Date range"
            scope="row"
          >
            5/1/2022 to 7/1/2022
          </th>
          <td
            class="tablet:width-card-lg"
            data-label="Leave frequency"
          >
            Reduced leave schedule
          </td>
          <td
            data-label="Status"
          >
            <span
              class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-base-darkest bg-warning-lighter"
            >
              Pending
            </span>
          </td>
        </tr>
        <tr
          data-testid="1-1"
        >
          <th
            class="tablet:width-card-lg"
            data-label="Date range"
            scope="row"
          >
            1/1/2022 to 4/1/2022
          </th>
          <td
            class="tablet:width-card-lg"
            data-label="Leave frequency"
          >
            Continuous leave
          </td>
          <td
            data-label="Status"
          >
            <span
              class="usa-tag display-inline-block text-bold text-middle text-center text-no-wrap text-base-darkest bg-warning-lighter"
            >
              Pending
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="padding-top-2"
  >
    <h2
      class="font-heading-md text-bold"
    >
      Notices
    </h2>
    <ul
      class="usa-list usa-list--unstyled margin-top-2"
      data-testid="documents"
    >
      <li
        class="margin-bottom-2"
      >
        <button
          class="usa-button position-relative text-bold usa-button--unstyled"
          type="button"
        >
          Approval notice (PDF)
        </button>
        <div
          class="text-base-dark"
        >
          Posted 1/2/2021.
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Status shows only legal documents 1`] = `
<ul
  class="usa-list usa-list--unstyled margin-top-2"
  data-testid="documents"
>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Appeal Acknowledgment (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/9/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Approval notice (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/10/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Approved Time Cancelled (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/11/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Benefit Amount Change Notice (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/12/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Change Request Approved (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/13/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Change Request Denied (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/14/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Denial notice (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/15/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Leave Allotment Change Notice (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/17/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Maximum Weekly Benefit Change Notice (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/18/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Request for more information (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/20/2021.
    </div>
  </li>
  <li
    class="margin-bottom-2"
  >
    <button
      class="usa-button position-relative text-bold usa-button--unstyled"
      type="button"
    >
      Pending Application Withdrawn (PDF)
    </button>
    <div
      class="text-base-dark"
    >
      Posted 1/21/2021.
    </div>
  </li>
</ul>
`;
